--- a/my_website/index.html
+++ b/my_website/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <a href="index.html">Home</a>
-    <a href="portflolio.html">Portfolio</a>
+    <a href="portfolio.html">Portfolio</a>
     <a href="aboutme.html">About</a>
     <h1>This is Anthony Oliveros's Home Page!</h1>
     <img src="images/home.jpg" height="250">
