--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -16,4 +16,4 @@
     </a>
 	  </body>
 	</html>
-    <p><a href="http://ai2.appinventor.mit.edu/#4787494308151296" My First app</a></p>
+    <p><a href="ai2.appinventor.mit.edu/#4787494308151296" My First app</a></p>
